# handmade-cpp-game

./: .clang-format  .clang-tidy  .clang-tidy-minimal  .gitattributes  .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  gamelib.jsonc  pyproject.toml
.nvim-personal/: callbacks.lua  launch_vs.ahk  lint.lua  lint_autocmd.lua  setup.lua  shell-goneovim.bat  shell-qt.bat  shell.bat
assets/art/: atlas.ftpp  atlas.json
assets/art/tiles/: grass.ase  tile_rule_forest.txt  tilerule_forest.txt  tilerule_grass.txt
assets/copied_assets/: inputs.jsonc
cmd/: build.bat  cli.py  debug.bat  deep_iter.py  format.bat  lint.bat  remake_cmake.bat  run.bat  run_noise_sandbox.bat  run_unit_tests.bat
codegen/flatbuffers/: bf_gamelib_generated.h
sources/: bf_atlas.fbs  bf_base.h  bf_containers.cpp  bf_context.cpp  bf_file.cpp  bf_file_h.cpp  bf_game.cpp  bf_game.h  bf_game_map.cpp  bf_game_types.cpp  bf_gamelib.cpp  bf_gamelib.fbs  bf_gamemap.cpp  bf_hash.cpp  bf_instrument.cpp  bf_instrument.h  bf_keys.cpp  bf_log.cpp  bf_log_h.cpp  bf_math.cpp  bf_memory.cpp  bf_memory_arena.cpp  bf_opengl.cpp  bf_rand.cpp  bf_renderer.cpp  bf_strings.cpp  bf_tilemap.cpp  bf_types.h  bf_world.cpp  bfc_opengl.cpp  bfc_renderer.cpp  bfc_tilemap.cpp  bftypes.h  game.cpp  game.h  main.cpp  meta_tools.cpp  tests.cpp  types.cpp  win32_noise_sandbox.cpp  (+1 more)
tests/: main.cpp  tests.cpp
